# hello-rust

./: Cargo.toml
src/: main.rs
src/starwars/: mod.rs  model.rs
