[package]
name = "hello-rust"
version = "0.1.0"
authors = ["kaushik <kaushik@dream11.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0"
async-graphql = "2.0.0"
async-graphql-actix-web = "2.0.0"
slab = "0.4.2"